Fix Spark openlineage.* configuration parameters and add integration test container execution (#1493)
* Fixed Spark openlineage parameters read from SparkConf

Signed-off-by: Michael Collado <mike@datakin.com>

* Added initial Spark container integration test

Signed-off-by: Michael Collado <mike@datakin.com>

* Added RDD integration test and added reflection for analyzing RDD outputs from JobConf

Signed-off-by: Michael Collado <mike@datakin.com>

* Improved logging and added log4j default properties

Signed-off-by: Michael Collado <mike@datakin.com>

* Changed Spark integration test to use @Testcontainers annotations

Signed-off-by: Michael Collado <mike@datakin.com>

* Add spark integration tests to circleci build

Signed-off-by: Michael Collado <mike@datakin.com>

* Changed circle config to use host machine directly

Signed-off-by: Michael Collado <mike@datakin.com>

* Fixed spark shadowJar task to obfuscate more packages

Signed-off-by: Michael Collado <mike@datakin.com>

* Fix documentation to reference correct params

Signed-off-by: Michael Collado <mike@datakin.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,10 +178,58 @@ jobs:
           when: on_fail
           command: cat integrations/spark/build/test-results/test/TEST-*.xml
       - run: ./gradlew --no-daemon :integrations:spark:jacocoTestReport
+      - run: ./gradlew --no-daemon --stacktrace :integrations:spark:shadowJar # generate the fat jar
       - store_test_results:
           path: integrations/spark/build/test-results/test
       - store_artifacts:
           path: build/reports/tests/test
+          destination: test-report
+      - save_cache:
+          key: v1-integration-spark-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - ~/.gradle
+      - persist_to_workspace:
+          root: .
+          paths:
+            - ./integrations/spark/build/libs/*.jar
+
+  image-api:
+    working_directory: ~/marquez
+    machine: true
+    steps:
+      - checkout
+      - run: ./.circleci/get-jdk11.sh
+      - run: docker build --no-cache --tag "marquezproject/marquez:${CIRCLE_SHA1}" .
+      - run: mkdir ./build && docker save -o ./build/marquezproject-api-image.tar "marquezproject/marquez:${CIRCLE_SHA1}"
+      - persist_to_workspace:
+          root: .
+          paths:
+            - ./build/marquezproject-api-image.tar
+
+  integration-test-spark:
+    working_directory: ~/marquez
+    machine: true
+    environment:
+      TESTCONTAINERS_RYUK_DISABLED: "true"
+      JDK8_HOME: /usr/lib/jvm/java-8-openjdk-amd64
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-integration-spark-{{ .Branch }}-{{ .Revision }}
+            - v1-integration-spark-{{ .Branch }}
+      - attach_workspace:
+          at: .
+      - run: docker load -i ./build/marquezproject-api-image.tar
+      - run: ./gradlew --no-daemon --stacktrace :integrations:spark:integrationTest -Pmarquez.image.tag=${CIRCLE_SHA1}
+      - run:
+          when: on_fail
+          command: cat integrations/spark/build/test-results/integrationTests/TEST-*.xml
+      - run: ./gradlew --no-daemon :integrations:spark:jacocoTestReport
+      - store_test_results:
+          path: integrations/spark/build/test-results/integrationTests
+      - store_artifacts:
+          path: integrations/spark/build/reports/tests/integrationTests
           destination: test-report
       - save_cache:
           key: v1-integration-spark-{{ .Branch }}-{{ .Revision }}
@@ -286,12 +334,17 @@ workflows:
   marquez:
     jobs:
       - build-api
+      - image-api
+      - build-integration-spark
+      - integration-test-spark:
+          requires:
+            - image-api
+            - build-integration-spark
+      - test-integration-airflow
       - test-web
       - build-client-java
-      - build-integration-spark
       - test-client-python
       - test-integration-common
-      - test-integration-airflow
       - test-integration-dbt-bigquery
       - test-integration-dbt-snowflake
       - integration-test-airflow:
