--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ marquez.yml
 
 # Dependent Helm charts
 chart/charts/
+
+integrations/spark/src/test/resources/test_data/test_output
+integrations/spark/src/test/resources/test_data/rdd_to_csv_output
+integrations/spark/src/test/resources/test_data/rdd_to_table
