Drop `FieldType` enum (#1561)
* Drop FieldType enum

Signed-off-by: wslulciuc <willy@datakin.com>

* Check for null on field types when versioning

Signed-off-by: wslulciuc <willy@datakin.com>

* Fix airflow integration test

Signed-off-by: wslulciuc <willy@datakin.com>

* Fix field type being upper cased in py client

Signed-off-by: wslulciuc <willy@datakin.com>

* Use git link to install marquez-python

Signed-off-by: wslulciuc <willy@datakin.com>

* Install git in base airflow test image

Signed-off-by: wslulciuc <willy@datakin.com>

* Fix airflow integration test

Signed-off-by: wslulciuc <willy@datakin.com>

--- a/integrations/airflow/Dockerfile.tests
+++ b/integrations/airflow/Dockerfile.tests
@@ -1,5 +1,7 @@
 FROM python:3.6-slim
 RUN mkdir /app
+RUN apt-get update && \
+    apt-get install -y git
 ADD airflow/setup.py /app
 ADD airflow/README.md /app
 COPY common /tmp/marquez-integration-common
