airflow: marquez integration imports openlineage (#1578)
Signed-off-by: Maciej Obuchowski <maciej.obuchowski@getindata.com>

--- a/integrations/airflow/Dockerfile.tests
+++ b/integrations/airflow/Dockerfile.tests
@@ -4,11 +4,8 @@ RUN apt-get update && \
     apt-get install -y git
 ADD airflow/setup.py /app
 ADD airflow/README.md /app
-COPY common /tmp/marquez-integration-common
-RUN cd /tmp/marquez-integration-common && pip wheel --wheel-dir=/tmp/marquez-integration-common/wheel .
 COPY airflow/marquez_airflow /app/marquez_airflow
 WORKDIR /app
 RUN ls -la
-RUN pip wheel --wheel-dir=/app/wheel -e /tmp/marquez-integration-common .[tests]
+RUN pip wheel --wheel-dir=/app/wheel -e .[tests]
 RUN cp -R /app/wheel /whl
-RUN cp /tmp/marquez-integration-common/wheel/marquez_integration_common* /whl
