--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,12 @@ services:
   api:
     image: "marquezproject/marquez:${TAG}"
     container_name: marquez-api
+    environment:
+      - MARQUEZ_PORT=${API_PORT}
+      - MARQUEZ_ADMIN_PORT=${API_ADMIN_PORT}
     ports:
-      - "5000:5000"
-      - "5001:5001"
+      - "${API_PORT}:${API_PORT}"
+      - "${API_ADMIN_PORT}:${API_ADMIN_PORT}"
     volumes:
       - ./docker/wait-for-it.sh:/usr/src/app/wait-for-it.sh
     links:
@@ -19,9 +22,9 @@ services:
     container_name: marquez-web
     environment:
       - MARQUEZ_HOST=api
-      - MARQUEZ_PORT=5000
+      - MARQUEZ_PORT=${API_PORT}
     ports:
-      - "3000:3000"
+      - "${WEB_PORT}:${WEB_PORT}"
     stdin_open: true
     tty: true
     depends_on:
