--- a/marquez.dev.yml
+++ b/marquez.dev.yml
@@ -1,11 +1,11 @@
 server:
   applicationConnectors:
   - type: http
-    port: 5000
+    port: ${MARQUEZ_PORT:-5000}
     httpCompliance: RFC7230_LEGACY
   adminConnectors:
   - type: http
-    port: 5001
+    port: ${MARQUEZ_ADMIN_PORT:-5001}
 
 db:
   driverClass: org.postgresql.Driver
