Add search endpoint (#1622)
* Add search endpoint

Signed-off-by: wslulciuc <willy@datakin.com>

* Add docs to search enums

Signed-off-by: wslulciuc <willy@datakin.com>

* Add docs to class SearchResult

Signed-off-by: wslulciuc <willy@datakin.com>

* Add SearchDao.search()

Signed-off-by: wslulciuc <willy@datakin.com>

* Use 'ilike' to query datasets and jobs

Signed-off-by: wslulciuc <willy@datakin.com>

* Minor javadoc updates for SearchResult

Signed-off-by: wslulciuc <willy@datakin.com>

* Add search endpoint to openapi spec

Signed-off-by: wslulciuc <willy@datakin.com>

* Add SearchDaoTest

Signed-off-by: wslulciuc <willy@datakin.com>

* Add javadocs to class SearchResultMapper

Signed-off-by: wslulciuc <willy@datakin.com>

* Add search call to java client

Signed-off-by: wslulciuc <willy@datakin.com>

* Return SearchResults on MarquezClient.search()

Signed-off-by: wslulciuc <willy@datakin.com>

* Handle empty or blank query string

Signed-off-by: wslulciuc <willy@datakin.com>

* Add docs for pattern matching in query string

Signed-off-by: wslulciuc <willy@datakin.com>

--- a/build.gradle
+++ b/build.gradle
@@ -69,14 +69,14 @@ subprojects {
     }
 
     dependencies {
-        compileOnly "org.projectlombok:lombok:${lombokVersion}"
+        implementation "org.projectlombok:lombok:${lombokVersion}"
         annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
-        testCompile "org.assertj:assertj-core:${assertjVersion}"
-        testCompile "org.junit.jupiter:junit-jupiter:${junit5Version}"
-        testCompile "org.mockito:mockito-core:${mockitoVersion}"
-        testCompile "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
-        testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
+        testImplementation "org.assertj:assertj-core:${assertjVersion}"
+        testImplementation "org.junit.jupiter:junit-jupiter:${junit5Version}"
+        testImplementation "org.mockito:mockito-core:${mockitoVersion}"
+        testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
+        testImplementation "org.projectlombok:lombok:${lombokVersion}"
         testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     }
 
