--- a/api/build.gradle
+++ b/api/build.gradle
@@ -34,33 +34,33 @@ ext {
 }
 
 dependencies {
-    compile project(':clients:java')
-    compile "io.dropwizard:dropwizard-core:${dropwizardVersion}"
-    compile "io.dropwizard:dropwizard-jdbi3:${dropwizardVersion}"
-    compile "io.dropwizard:dropwizard-json-logging:${dropwizardVersion}"
-    compile "io.dropwizard:dropwizard-http2:${dropwizardVersion}"
-    compile "io.dropwizard:dropwizard-assets:${dropwizardVersion}"
-    compile "io.prometheus:simpleclient:${prometheusVersion}"
-    compile "io.prometheus:simpleclient_dropwizard:${prometheusVersion}"
-    compile "io.prometheus:simpleclient_hotspot:${prometheusVersion}"
-    compile "io.prometheus:simpleclient_servlet:${prometheusVersion}"
-    compile "org.jdbi:jdbi3-core:${jdbi3Version}"
-    compile "org.jdbi:jdbi3-postgres:${jdbi3Version}"
-    compile "org.jdbi:jdbi3-sqlobject:${jdbi3Version}"
-    compile 'com.google.guava:guava:30.1.1-jre'
-    compile 'org.dhatim:dropwizard-sentry:2.0.20'
-    compile "io.sentry:sentry:${sentryVersion}"
-    compile 'org.flywaydb:flyway-core:6.5.7'
-    compile "org.postgresql:postgresql:${postgresqlVersion}"
-    compile 'com.graphql-java:graphql-java:17.2'
-    compile 'com.graphql-java-kickstart:graphql-java-servlet:11.1.1'
+    implementation project(':clients:java')
+    implementation "io.dropwizard:dropwizard-core:${dropwizardVersion}"
+    implementation "io.dropwizard:dropwizard-jdbi3:${dropwizardVersion}"
+    implementation "io.dropwizard:dropwizard-json-logging:${dropwizardVersion}"
+    implementation "io.dropwizard:dropwizard-http2:${dropwizardVersion}"
+    implementation "io.dropwizard:dropwizard-assets:${dropwizardVersion}"
+    implementation "io.prometheus:simpleclient:${prometheusVersion}"
+    implementation "io.prometheus:simpleclient_dropwizard:${prometheusVersion}"
+    implementation "io.prometheus:simpleclient_hotspot:${prometheusVersion}"
+    implementation "io.prometheus:simpleclient_servlet:${prometheusVersion}"
+    implementation "org.jdbi:jdbi3-core:${jdbi3Version}"
+    implementation "org.jdbi:jdbi3-postgres:${jdbi3Version}"
+    implementation "org.jdbi:jdbi3-sqlobject:${jdbi3Version}"
+    implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation 'org.dhatim:dropwizard-sentry:2.0.20'
+    implementation "io.sentry:sentry:${sentryVersion}"
+    implementation 'org.flywaydb:flyway-core:6.5.7'
+    implementation "org.postgresql:postgresql:${postgresqlVersion}"
+    implementation 'com.graphql-java:graphql-java:17.2'
+    implementation 'com.graphql-java-kickstart:graphql-java-servlet:11.1.1'
     implementation 'io.openlineage:openlineage-java:0.2.1'
 
-    testCompile "io.dropwizard:dropwizard-testing:${dropwizardVersion}"
-    testCompile "org.jdbi:jdbi3-testing:${jdbi3Version}"
-    testCompile "org.junit.vintage:junit-vintage-engine:${junit5Version}"
-    testCompile "org.testcontainers:postgresql:${testcontainersVersion}"
-    testCompile "org.testcontainers:junit-jupiter:${testcontainersVersion}"
+    testImplementation "io.dropwizard:dropwizard-testing:${dropwizardVersion}"
+    testImplementation "org.jdbi:jdbi3-testing:${jdbi3Version}"
+    testImplementation "org.junit.vintage:junit-vintage-engine:${junit5Version}"
+    testImplementation "org.testcontainers:postgresql:${testcontainersVersion}"
+    testImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
     testImplementation 'org.apache.httpcomponents:httpclient:4.5.13'
 }
 
