--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marquez-ui",
-  "version": "0.1.5",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "author": "peter@datakin.com",
   "private": false,
@@ -20,9 +20,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.12",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/styles": "^4.11.4",
     "@types/react-router-dom": "^5.1.2",
     "@visx/clip-path": "1.7.0",
     "@visx/gradient": "1.7.0",
@@ -46,6 +47,7 @@
     "http-proxy-middleware": "^0.20.0",
     "jest": "26.6.3",
     "lodash": "^4.17.19",
+    "moment": "^2.29.1",
     "postcss-loader": "^3.0.0",
     "postcss-modules-values": "^2.0.0",
     "react": "^16.8.0",
@@ -60,7 +62,6 @@
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
-    "@material-ui/styles": "^4.0.0-rc.0",
     "@types/classnames": "^2.2.10",
     "@types/d3": "^5.7.2",
     "@types/d3-axis": "^1.0.12",
