JSON formatting and highlighting (#1690)
* Adding JSON formatting and special case highlighting.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Moving to dependencies.

Signed-off-by: Peter Hicks <peter@datakin.com>

* package-lock.json file updates.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Using different import for testing.

Signed-off-by: Peter Hicks <peter@datakin.com>

* Fixing empty case handling.

Signed-off-by: Peter Hicks <peter@datakin.com>

Co-authored-by: Peter Hicks <peter@datakin.com>

--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.11.4",
     "@types/react-router-dom": "^5.1.2",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "@visx/clip-path": "1.7.0",
     "@visx/gradient": "1.7.0",
     "@visx/grid": "1.7.0",
@@ -55,6 +56,7 @@
     "react-helmet": "^6.1.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.1.2",
+    "react-syntax-highlighter": "^15.4.4",
     "react-vis": "^1.11.7",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
