Prepare for release 0.19.0
Signed-off-by: wslulciuc <willy@datakin.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 org.gradle.internal.http.connectionTimeout=60000
 org.gradle.internal.http.socketTimeout=60000
 
-version=0.18.1-SNAPSHOT
+version=0.19.0
