Helm chart: Enable web app to access API (#1970)
* fix helm chart for web to access API

Signed-off-by: GZack2000 <manish.zack@gmail.com>

Co-authored-by: Willy Lulciuc <willy@datakin.com>

--- a/chart/templates/web/deployment.yaml
+++ b/chart/templates/web/deployment.yaml
@@ -39,7 +39,7 @@ spec:
               port: http
           env:
             - name: MARQUEZ_HOST
-              value: {{ .Values.marquez.hostname | quote }}
+              value: {{ include "common.names.fullname" . }}
             - name: MARQUEZ_PORT
               value: {{ .Values.marquez.port | quote }}
           {{- if .Values.web.resources }}
