Add `metadata` cmd (#2091)
* Add metadata.json to .gitignore

Signed-off-by: wslulciuc <willy@datakin.com>

* Add psql conf for pghero

Signed-off-by: wslulciuc <willy@datakin.com>

* Add pghero

Signed-off-by: wslulciuc <willy@datakin.com>

* Add metadata cmd

Signed-off-by: wslulciuc <willy@datakin.com>

* Update javadocs

Signed-off-by: wslulciuc <willy@datakin.com>

* Add steps to enable query stats with pghero

Signed-off-by: wslulciuc <willy@datakin.com>

* Give pghero superuser access

Signed-off-by: wslulciuc <willy@datakin.com>

* Update cmd arg constant for --bytes-per-event

Signed-off-by: wslulciuc <willy@datakin.com>

* Simplify newOlEvents()

Signed-off-by: wslulciuc <willy@datakin.com>

Signed-off-by: wslulciuc <willy@datakin.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,9 @@ services:
       - MARQUEZ_USER=marquez
       - MARQUEZ_PASSWORD=marquez
     volumes:
+      - ./docker/postgresql.conf:/etc/postgresql/postgresql.conf
       - db-init:/docker-entrypoint-initdb.d
+    command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf"]
     # Enables SQL statement logging (see: https://www.postgresql.org/docs/12/runtime-config-logging.html#GUC-LOG-STATEMENT)
     # command: ["postgres", "-c", "log_statement=all"]
 
