--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,3 +8,11 @@ services:
     build:
       context: ./web
       dockerfile: Dockerfile
+
+  pghero:
+    image: ankane/pghero
+    container_name: pghero
+    ports:
+      - "8080:8080"
+    environment:
+      DATABASE_URL: postgres://postgres:password@db:5432
