Fix `codecov` in CI (#2133)
* Use codecov/upload

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Use codecov/upload

Signed-off-by: wslulciuc <willy@datakin.com>

Signed-off-by: wslulciuc <willy@datakin.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,10 @@ only-on-release: &only-on-release
     branches:
       ignore: /.*/
 
+orbs:
+  # https://circleci.com/orbs/registry/orb/codecov/codecov
+  codecov: codecov/codecov@3.2.3
+
 jobs:
   build-api:
     working_directory: ~/marquez
@@ -32,7 +36,7 @@ jobs:
       - run: ./gradlew --no-daemon --stacktrace api:javadoc
       - run: ./gradlew --no-daemon --stacktrace api:build
       - run: ./gradlew --no-daemon api:jacocoTestReport
-      - run: bash <(curl -s https://codecov.io/bash)
+      - codecov/upload
       - store_test_results:
           path: api/build/test-results/test
       - store_artifacts:
@@ -99,7 +103,7 @@ jobs:
       - run: ./gradlew --no-daemon --stacktrace clients:java:javadoc
       - run: ./gradlew --no-daemon --stacktrace clients:java:build
       - run: ./gradlew --no-daemon clients:java:jacocoTestReport
-      - run: bash <(curl -s https://codecov.io/bash)
+      - codecov/upload
       - store_test_results:
           path: clients/java/build/test-results/test
       - store_artifacts:
@@ -119,7 +123,7 @@ jobs:
       - run: pip install -e .[dev]
       - run: flake8
       - run: pytest --cov=marquez_python tests/
-      - run: bash <(curl -s https://codecov.io/bash)
+      - codecov/upload
 
   build-client-python:
     working_directory: ~/marquez/clients/python
