--- a/web/package.json
+++ b/web/package.json
@@ -38,7 +38,7 @@
     "autoprefixer": "^9.5.1",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.4.0",
-    "css-loader": "^2.1.0",
+    "css-loader": "^6.7.1",
     "d3": "^5.16.0",
     "d3-axis": "^1.0.12",
     "d3-format": "^1.4.4",
@@ -52,11 +52,10 @@
     "postcss-modules-values": "^2.0.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.1.2",
     "react-syntax-highlighter": "^15.4.4",
-    "react-vis": "^1.11.7",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
@@ -72,7 +71,7 @@
     "@types/dagre": "^0.7.44",
     "@types/enzyme": "^3.1.16",
     "@types/enzyme-adapter-react-16": "^1.0.3",
-    "@types/jest": "^23.3.13",
+    "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.123",
     "@types/material-ui": "^0.21.7",
     "@types/react": "^16.8.13",
@@ -94,7 +93,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "file-loader": "^3.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "27.3.1",
