delete: add endpoint for deleting namespaces (#2244)
* delete: child jobs are now properly deleted

Signed-off-by: Maciej Obuchowski <obuchowski.maciej@gmail.com>

* delete: add delete namespace endpoint

Signed-off-by: Maciej Obuchowski <obuchowski.maciej@gmail.com>

Signed-off-by: Maciej Obuchowski <obuchowski.maciej@gmail.com>

--- a/.github/workflows/headerchecker.yml
+++ b/.github/workflows/headerchecker.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Check for headers
         run: |
           ok=1
-          readarray -t files <<<"$(jq -r '.[]' <<<'${{ steps.files.outputs.all }}')"
+          readarray -t files <<<"$(jq -r '.[]' <<<'${{ steps.files.outputs.added_modified }}')"
           for file in ${files[@]}; do 
             if [[ ($file == *".java") ]]; then
               if ! grep -q Copyright "$file"; then
