--- a/codecov.yml
+++ b/codecov.yml
@@ -1,4 +1,11 @@
 codecov:
   branch: main
+
+coverage:
   status:
     patch: off
+
+ignore:
+  - "api/src/main/java/marquez/db/migrations/V44_1__UpdateRunsWithJobUUID.java"
+  - "api/src/main/java/marquez/db/migrations/V44_2__BackfillAirflowParentRuns.java"
+  - "api/src/main/java/marquez/db/migrations/V44_3_BackfillJobsWithParents.java"
