--- a/web/package.json
+++ b/web/package.json
@@ -17,12 +17,14 @@
     "node": ">12.22.7"
   },
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.4",
     "@types/react-router-dom": "^5.1.2",
     "@types/react-syntax-highlighter": "^13.5.2",
@@ -45,6 +47,7 @@
     "d3-scale": "^3.2.1",
     "d3-selection": "^1.4.1",
     "dagre": "^0.8.5",
+    "file-saver": "^2.0.5",
     "http-proxy-middleware": "^0.20.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -53,6 +56,7 @@
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-helmet-async": "^1.3.0",
+    "react-inlinesvg": "^3.0.1",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.1.2",
     "react-syntax-highlighter": "^15.4.4",
@@ -71,6 +75,7 @@
     "@types/dagre": "^0.7.44",
     "@types/enzyme": "^3.1.16",
     "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/file-saver": "^2.0.5",
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.123",
     "@types/material-ui": "^0.21.7",
