--- a/web/package.json
+++ b/web/package.json
@@ -63,7 +63,10 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "i18next": "^22.0.6",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "react-i18next": "^12.0.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
