--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -11,7 +11,8 @@
     "lib": ["es2016", "es2017", "dom"],
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "resolveJsonModule": false
   },
   "include": ["./src/**/*"],
   "exclude": ["./src/__tests__/*"]
