--- a/web/package.json
+++ b/web/package.json
@@ -49,13 +49,16 @@
     "dagre": "^0.8.5",
     "file-saver": "^2.0.5",
     "http-proxy-middleware": "^0.20.0",
+    "i18next": "^22.4.3",
+    "i18next-browser-languagedetector": "^7.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "postcss-loader": "^3.0.0",
     "postcss-modules-values": "^2.0.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet-async": "^1.3.0",
+    "react-i18next": "^12.1.1",
     "react-inlinesvg": "^3.0.1",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.1.2",
@@ -63,12 +66,11 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
-    "webpack-merge": "^4.2.1",
-    "i18next": "^22.0.6",
-    "i18next-browser-languagedetector": "^7.0.1",
-    "react-i18next": "^12.0.0"
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.1.20",
+    "@types/babel__template": "^7.4.1",
     "@types/classnames": "^2.2.10",
     "@types/d3": "^5.7.2",
     "@types/d3-axis": "^1.0.12",
@@ -82,6 +84,7 @@
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.123",
     "@types/material-ui": "^0.21.7",
+    "@types/node": "^18.11.13",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.3",
     "@types/react-helmet": "^5.0.10",
