Fix asset loading for web (#2323)
* Updates for assets.

* Newline.

Co-authored-by: phix <peter.hicks@astronomer.io>
Co-authored-by: Willy Lulciuc <willy@datakin.com>

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -14,6 +14,9 @@
     "downlevelIteration": true,
     "resolveJsonModule": false
   },
-  "include": ["./src/**/*"],
+  "include": [
+    "./src/**/*",
+    "styles.d.ts"
+  ],
   "exclude": ["./src/__tests__/*"]
 }
