Add charts/ for renovate to ignore
Signed-off-by: wslulciuc <willy@datakin.com>

--- a/renovate.json
+++ b/renovate.json
@@ -21,5 +21,6 @@
       "matchPackagePatterns": ["^org.apache.spark:", ".css$", "^gradle$"],
       "automerge": false
     }
-  ]
+  ],
+  "ignorePaths": ["**/chart/**"]
 }
