configure renovate to label pull requests (#2352)
Signed-off-by: Michael Robinson <merobi@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -15,11 +15,13 @@
   "packageRules": [
     {
       "matchPackageNames": ["com.graphql-java:graphql-java"],
-      "allowedVersions": "/^[0-9]+\\.[0-9]+(\\.[0-9]+)?$/"
+      "allowedVersions": "/^[0-9]+\\.[0-9]+(\\.[0-9]+)?$/",
+      "addLabels": ["dependencies", "renovate"]
     },
     {
       "matchPackagePatterns": ["^org.apache.spark:", ".css$", "^gradle$"],
-      "automerge": false
+      "automerge": false,
+      "addLabels": ["dependencies", "renovate"]
     }
   ],
   "ignorePaths": ["**/chart/**"]
