Add CI workflow for testing db migrations (#2326)
* Add workflows/db.yml and wip script for testing db migrations

Signed-off-by: wslulciuc <willy@datakin.com>

* Add --args to ./docker/up.sh

Signed-off-by: wslulciuc <willy@datakin.com>

* Add db-data volume

Signed-off-by: wslulciuc <willy@datakin.com>

* Add .github/workflows/db.sh

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Add .github/workflows/db.sh

Signed-off-by: wslulciuc <willy@datakin.com>

* db.sh -> db-migration.sh

Signed-off-by: wslulciuc <willy@datakin.com>

* Use git sha1 for tag on `--build`

Signed-off-by: wslulciuc <willy@datakin.com>

* Use `seed_api` for docker service name and build on `--build`

Signed-off-by: wslulciuc <willy@datakin.com>

* Remove cd into root dir in docker/prune.sh

Signed-off-by: wslulciuc <willy@datakin.com>

* Cleanup docker/volumes.sh

Signed-off-by: wslulciuc <willy@datakin.com>

* Fix log error formatting

Signed-off-by: wslulciuc <willy@datakin.com>

* Add db-backup volume

Signed-off-by: wslulciuc <willy@datakin.com>

* Add `--no-web` and `--no-volumes` flags

Signed-off-by: wslulciuc <willy@datakin.com>

* Add `docker-compose.web-dev.yml` to support `--no-web` flag

Signed-off-by: wslulciuc <willy@datakin.com>

* Add `log_db_migration()` to `db-migration.sh`

Signed-off-by: wslulciuc <willy@datakin.com>

* Add comments and cleanup logic in `docker/up.sh`

Signed-off-by: wslulciuc <willy@datakin.com>

* Use `sudo` to run `db-migration.sh`

Signed-off-by: wslulciuc <willy@datakin.com>

* Fix logic for `--no-web` and `--no-volumes`

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Fix logic for `--no-web` and `--no-volumes`

Signed-off-by: wslulciuc <willy@datakin.com>

* Remove `-it` flags from log_db_migration()

Signed-off-by: wslulciuc <willy@datakin.com>

* Set image in docker-compose.web-dev.yml

Signed-off-by: wslulciuc <willy@datakin.com>

* Use dev c

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,6 +148,15 @@ jobs:
       - run: npm install --prefix=${HOME}/.local --global redoc-cli
       - run: redoc-cli bundle spec/openapi.yml
 
+  migrate-db:
+    working_directory: ~/marquez
+    machine:
+      image: ubuntu-2004:current
+    steps:
+      - checkout
+      - run: ./.circleci/get-docker-compose.sh
+      - run: ./.circleci/db-migration.sh
+
   release-java:
     working_directory: ~/marquez
     machine:
@@ -195,6 +204,9 @@ workflows:
       - unit-test-web
       - unit-test-client-python
       - lint-spec-api
+      - migrate-db:
+          requires:
+            - build-api
   release:
     jobs:
       - build-client-python:
