--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,25 +10,12 @@ services:
       - "${API_PORT}:${API_PORT}"
       - "${API_ADMIN_PORT}:${API_ADMIN_PORT}"
     volumes:
-      - utils:/opt/marquez
+      - data:/opt/marquez
     links:
       - "db:postgres"
     depends_on:
       - db
     entrypoint: ["/opt/marquez/wait-for-it.sh", "db:5432", "--", "./entrypoint.sh"]
-
-  web:
-    image: "marquezproject/marquez-web:${TAG}"
-    container_name: marquez-web
-    environment:
-      - MARQUEZ_HOST=api
-      - MARQUEZ_PORT=${API_PORT}
-    ports:
-      - "${WEB_PORT}:${WEB_PORT}"
-    stdin_open: true
-    tty: true
-    depends_on:
-      - api
 
   db:
     image: postgres:12.1
@@ -42,12 +29,15 @@ services:
       - MARQUEZ_USER=marquez
       - MARQUEZ_PASSWORD=marquez
     volumes:
-      - ./docker/postgresql.conf:/etc/postgresql/postgresql.conf
+      - db-conf:/etc/postgresql
       - db-init:/docker-entrypoint-initdb.d
+      - db-backup:/var/lib/postgresql/data
     command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf"]
     # Enables SQL statement logging (see: https://www.postgresql.org/docs/12/runtime-config-logging.html#GUC-LOG-STATEMENT)
     # command: ["postgres", "-c", "log_statement=all"]
 
 volumes:
-  utils:
+  data:
+  db-conf:
   db-init:
+  db-backup:
