Add `load-test-api` CI job (#2358)
* Add `load-test-api` CI job

Signed-off-by: wslulciuc <willy@datakin.com>

* Fix path to load script

Signed-off-by: wslulciuc <willy@datakin.com>

* Add `get-k6.sh`

Signed-off-by: wslulciuc <willy@datakin.com>

* Add get-k6.sh

Signed-off-by: wslulciuc <willy@datakin.com>

* Move load-testing/ under api/

Signed-off-by: wslulciuc <willy@datakin.com>

* Create `/root/.gnupg/`

Signed-off-by: wslulciuc <willy@datakin.com>

* Add load test plan to `.circleci/api-load-test.sh`

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Add load test plan to `.circleci/api-load-test.sh`

Signed-off-by: wslulciuc <willy@datakin.com>

* Run http server in detach mode

Signed-off-by: wslulciuc <willy@datakin.com>

* Log steps in `.circleci/api-load-test.sh`

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Log steps in `.circleci/api-load-test.sh`

Signed-off-by: wslulciuc <willy@datakin.com>

* Fix persist workspace path

Signed-off-by: wslulciuc <willy@datakin.com>

* Use db container only

Signed-off-by: wslulciuc <willy@datakin.com>

* Install jdk17

Signed-off-by: wslulciuc <willy@datakin.com>

* Fix paths

Signed-off-by: wslulciuc <willy@datakin.com>

* Debug

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Debug

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Debug

Signed-off-by: wslulciuc <willy@datakin.com>

* Add postgres host override in marquez.dev.yml

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Add postgres host override in marquez.dev.yml

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Add postgres host override in marquez.dev.yml

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Add postgres host override in marquez.dev.yml

Signed-off-by: wslulciuc <willy@datakin.com>

* continued: Add postgres host override in marquez.dev.yml

Signed-off-by: wslulciuc <willy@da

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,6 @@ only-on-release: &only-on-release
       ignore: /.*/
 
 orbs:
-  # https://circleci.com/orbs/registry/orb/codecov/codecov
   codecov: codecov/codecov@3.2.3
 
 jobs:
@@ -148,6 +147,21 @@ jobs:
       - run: npm install --prefix=${HOME}/.local --global redoc-cli
       - run: redoc-cli bundle spec/openapi.yml
 
+  load-test-api:
+    working_directory: ~/marquez
+    machine:
+      image: ubuntu-2004:current
+    steps:
+      - checkout
+      - run: ./.circleci/get-docker-compose.sh
+      - run: ./.circleci/get-jdk17.sh
+      - run: ./.circleci/get-k6.sh
+      - run: ./.circleci/api-load-test.sh
+      - store_artifacts:
+          path: marquez
+      - store_artifacts:
+          path: k6
+
   migrate-db:
     working_directory: ~/marquez
     machine:
@@ -204,6 +218,9 @@ workflows:
       - unit-test-web
       - unit-test-client-python
       - lint-spec-api
+      - load-test-api:
+          requires:
+            - build-api
       - migrate-db:
           requires:
             - build-api
