OL facets - PR1 - create & feed new tables while not reading them (#2350)
Signed-off-by: Pawel Leszczynski <leszczynski.pawel@gmail.com>

Signed-off-by: Pawel Leszczynski <leszczynski.pawel@gmail.com>
Co-authored-by: Willy Lulciuc <willy@datakin.com>

--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,7 @@ subprojects {
         testImplementation "org.assertj:assertj-core:${assertjVersion}"
         testImplementation "org.junit.jupiter:junit-jupiter:${junit5Version}"
         testImplementation "org.mockito:mockito-core:${mockitoVersion}"
+        testImplementation "org.mockito:mockito-inline:${mockitoVersion}"
         testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
         testImplementation "org.projectlombok:lombok:${lombokVersion}"
         testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
