--- a/marquez.dev.yml
+++ b/marquez.dev.yml
@@ -9,7 +9,7 @@ server:
 
 db:
   driverClass: org.postgresql.Driver
-  url: jdbc:postgresql://${POSTGRES_HOST:-localhost}:5432/marquez
+  url: jdbc:postgresql://postgres:5432/marquez
   user: marquez
   password: marquez
 
