OL facets - PR2 - read facets from views based on lineage_events table (#2355)
* OL facets - PR2 - read facets from views pointing to lineage_events table

Signed-off-by: Pawel Leszczynski <leszczynski.pawel@gmail.com>

* OL facets - PR3 - migrate data to facet tables (#2359)

Signed-off-by: Pawel Leszczynski <leszczynski.pawel@gmail.com>

---------

Signed-off-by: Pawel Leszczynski <leszczynski.pawel@gmail.com>
Co-authored-by: Willy Lulciuc <willy@datakin.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,6 +166,7 @@ jobs:
     working_directory: ~/marquez
     machine:
       image: ubuntu-2004:current
+    resource_class: large
     steps:
       - checkout
       - run: ./.circleci/get-docker-compose.sh
